@@ -187,7 +187,9 @@ allprojects {
             // Stop deprecation warnings since we use stdlib-jdkX
             exclude(group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jre8')
             exclude(group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jre7')
-            exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j-impl")
+            exclude(group: 'org.slf4j', module:'slf4j-simple')
+
+            //exclude(group: "org.apache.logging.log4j", module: "log4j-slf4j-impl")
             resolutionStrategy {
                 preferProjectModules()
                 eachDependency { DependencyResolveDetails details ->
@@ -230,42 +232,13 @@ subprojects {
         environment "CORDA_VARIATION_VERSION", "$corda_variation_version"
         maxParallelForks = 1
         jvmArgs "-Xmx2048m", "-XX:MaxPermSize=2048m"
+        testLogging.showStandardStreams = true
+        testLogging.exceptionFormat = 'full'
         useJUnitPlatform {
-            includeEngines 'junit-jupiter'
-            testLogging {
-                events "passed", "skipped", "failed", "standardOut", "standardError"
-                showStandardStreams = project.hasProperty("enableTestLogging") && project.property("enableTestLogging") == true
-            }
             include '**/*Test.class'
         }
     }
-    // Run integration tests using junit5
-    task nodedriverTest(type: Test) {
-        environment "CORDA_VARIATION_VERSION", "$corda_variation_version"
-        maxParallelForks = 1
-        jvmArgs "-Xmx2048m", "-XX:MaxPermSize=2048m"
-        useJUnitPlatform {
-            includeEngines 'junit-jupiter'
-            testLogging {
-                events "passed", "skipped", "failed", "standardOut", "standardError"
-                showStandardStreams = project.hasProperty("enableTestLogging") && project.property("enableTestLogging") == true
-            }
-            include '**/nodedriver/**/*Test.class'
-        }
-    }
-    task cordformTest(type: Test) {
-        environment "CORDA_VARIATION_VERSION", "$corda_variation_version"
-        maxParallelForks = 1
-        jvmArgs "-Xmx2048m", "-XX:MaxPermSize=2048m"
-        useJUnitPlatform {
-            includeEngines 'junit-jupiter'
-            testLogging {
-                events "passed", "skipped", "failed", "standardOut", "standardError"
-                showStandardStreams = project.hasProperty("enableTestLogging") && project.property("enableTestLogging") == true
-            }
-            include '**/containers/**/*Test.class'
-        }
-    }
+
     dependencies {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
         implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
